--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       content="salud, ejercicio, entrenamiento, personal trainer, fitness"
     />
 
+    <!-- CDN TOASTIFY CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
     <!-- CDN DE BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -86,7 +89,7 @@
       <section id="contenedor_productos"></section>
     </main>
 
-    <!-- CARRITO COMPRA (modal)-->
+    <!-- CARRITO COMPRA (modal-Booststrap)-->
     <section>
       <div
         class="modal fade"
@@ -107,6 +110,10 @@
               ></button>
             </div>
             <div class="modal-body" id="contenedor_carrito"></div>
+
+            <div>
+              <p class="text-center" id="total"></p>
+            </div>
             <div class="modal-footer">
               <button
                 type="button"
@@ -115,7 +122,11 @@
               >
                 Seguir comprando
               </button>
-              <button type="button" class="btn btn-danger">
+              <button
+                type="button"
+                class="btn btn-danger"
+                id="finalizar_compra"
+              >
                 Finalizar compra.
               </button>
             </div>
@@ -123,9 +134,6 @@
         </div>
       </div>
     </section>
-
-    
-
 
     <!-- FOOTER LINKEADO A REDES -->
     <footer>
@@ -149,16 +157,23 @@
       </div>
     </footer>
 
+
+    <!-- CDN LUXON JS -->
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.2/build/global/luxon.min.js"></script>
+    <!-- TOASTIFY JS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- CDN SWEETALERT JS  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- APP JS  -->
     <script src="./js/app.js"></script>
-
     <!-- JS BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
     <!-- FONT AWESOME -->
     <script
       src="https://kit.fontawesome.com/10fab9b088.js"
       crossorigin="anonymous"
     ></script>
+
   </body>
+  
 </html>
